# flint

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix  justfile  lefthook.yml  package.nix  todo.md
.config/: nextest.toml
.github/: build.yml
.github/workflows/: build.yml  check.yml  test.yml
assets/: duplicates.tape  intro.tape  stale.tape
flint/: Cargo.toml
flint/src/: lib.rs  main.rs
flint/src/ast/: display.rs  mod.rs  treesitter.rs  write.rs
flint/src/cache/: mod.rs
flint/src/cli/: mod.rs  verbosity.rs
flint/src/command/: mod.rs
flint/src/errors/: cache.rs  command.rs  mod.rs  parse.rs  status.rs  treesitter.rs  write.rs
flint/src/metadata/: dependencies.rs  flake_path.rs  mod.rs  modified_time.rs  source_urls.rs  update_inputs.rs
flint/src/modified_time/: display.rs  input.rs  mod.rs
flint/tests/: cache.rs  metadata.rs  treesitter.rs  write.rs
flint/tests/common/: flake.nix  mod.rs
src/: flake.nix  lib.rs  main.rs  temp.nix
src/ast/: display.rs  mod.rs  treesitter.rs  write.rs
src/command/: mod.rs
src/errors/: command.rs  mod.rs  modified_time.rs  parse.rs  status.rs  treesitter.rs  write.rs
src/metadata/: dependencies.rs  flake_path.rs  mod.rs  modified_time.rs  source_urls.rs  update_inputs.rs
src/modified_time/: display.rs  input.rs  mod.rs
src/treesitter/: mod.rs  write_file.rs
xtask/: Cargo.toml
xtask/src/: comp.rs  main.rs  man.rs
