[package]
name = "flint"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.14"
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", default-features = true, features = [
    "derive",
    "env",
] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
    "tracing",
] }
indicatif = { version = "0.18.4", features = ["rayon"] }
inquire = { default-features = false, features = [
    "crossterm",
], version = "0.9.4" }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.23", default-features = true, features = [
    "ansi",
    "fmt",
    "env-filter",
] }
tree-sitter = "0.26.8"
tree-sitter-nix = "0.3.0"
unicode-width = "0.2.2"
wait-timeout = "0.2.1"
yansi = "1.0.1"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
enum_variant_names = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
non_ascii_literal = "allow"
pattern_type_mismatch = "allow"
print_stdout = "allow"
question_mark_used = "allow"
similar_names = "allow"
single_call_fn = "allow"
std_instead_of_core = "allow"
struct_excessive_bools = "allow"
too_long_first_doc_paragraph = "allow"
too_many_lines = "allow"
unused_trait_names = "allow"
panic = "deny"
unwrap_used = "deny"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

[profile.release]
lto = true
opt-level = 3
strip = true
