[package]
name                   = "flint"
version.workspace      = true
publish                = false
repository             = "https://github.com/Ishaan-Datta/flint"
description            = "Flake Lock Lint"
readme                 = "README.md"
keywords               = [ "nix", "nixos", "flake", "lint", "CLI" ]
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
default-run            = "flint"

[lints]
workspace = true

[dependencies]
anstyle.workspace            = true
anyhow.workspace             = true
chrono.workspace             = true
clap.workspace               = true
color-eyre.workspace         = true
indicatif.workspace          = true
inquire.workspace            = true
rayon.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
shlex.workspace              = true
tempfile.workspace           = true
test-group.workspace         = true
textwrap.workspace           = true
thiserror.workspace          = true
tracing.workspace            = true
tracing-indicatif.workspace  = true
tracing-subscriber.workspace = true
tree-sitter.workspace        = true
tree-sitter-nix.workspace    = true
unicode-width.workspace      = true
wait-timeout.workspace       = true
yansi.workspace              = true

[dev-dependencies]
tempfile.workspace     = true
tracing-test.workspace = true
